--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <h1>
-        Hello World
+        George Cooke
     </h1>
+
+    <p>
+        Hello, my name is George Cooke. This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress!
+    </p>
 </html>
