--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </h1>
 
     <p>
-        Hello, my name is George Cooke. This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress!
+        Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.
+    </p>
+    <p>
+        This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress!
     </p>
 </html>
