--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.
     </p>
     <p>
-        This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress!
+        This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress! Feel free to reach out at any point at George@GeorgeCooke.uk
     </p>
 </html>
