Added styling options for future in page navigation

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,14 @@
         <nav>
             <ul>
                 <li>Pages</li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="blog-overviews.html">Blog</a></li>
+                <li><a href="index.html" class="nav-button">Home</a></li>
+                <li><a href="#" class="nav-button">Portfolio</a></li>
+                <li><a href="blog-overviews.html" class="nav-button">Blog</a></li>
             </ul>
         </nav>
 
         <section>
+            <hr>
             <h1>Content coming soon!</h1>
         </section>
 
