--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav>
             <ul>
                 <li>Pages</li>
-                <li><a href="#">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog-overviews.html">Blog</a></li>
+                <li><a href="#" class="nav-button">Home</a></li>
+                <li><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                <li><a href="blog-overviews.html" class="nav-button">Blog</a></li>
             </ul>
         </nav>
 
