Added contact page and CSS to portfolio and contact

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>George Cooke - Portfolio</title>
+        <title>George Cooke - Contact</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -15,9 +15,9 @@
             <nav class="header-child-list">
                 <ul class="navigation-list">
                     <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
-                    <li class="navigation-item"><a href="#" class="nav-button-current">Portfolio</a></li>
+                    <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                     <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
-                    <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
+                    <li class="navigation-item"><a href="#" class="nav-button-current">Contact</a></li>
                 </ul>
             </nav>
         </header>
