--- a/blog-overviews.html
+++ b/blog-overviews.html
@@ -14,11 +14,12 @@
 
     <body>
         <nav>
-            <ul>
+            <ul class="navigation-list">
                 <li>Pages</li>
-                <li><a href="index.html" class="nav-button">Home</a></li>
-                <li><a href="portfolio.html" class="nav-button">Portfolio</a></li>
-                <li><a href="#" class="nav-button">Blog</a></li>
+                <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
+                <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                <li class="navigation-item"><a href="#" class="nav-button">Blog</a></li>
+                <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
         </nav>
 
