--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#" class="nav-button">Home</a></li>
                 <li><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                 <li><a href="blog-overviews.html" class="nav-button">Blog</a></li>
+                <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
         </nav>
 
@@ -28,14 +29,7 @@
             <hr>
             <h1>George Cooke</h1>
             <hr>
-            <p>
-                Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. 
-                I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.
-                <br><br>
-                This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you 
-                will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress! Feel free to reach out at any point 
-                at <a href = "mailto:george@georgecooke.uk" title="Email george@georgecooke.uk">George@GeorgeCooke.uk</a>
-            </p>
+            <p>Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.<br><br>This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress! Feel free to reach out at any point at <a href = "mailto:george@georgecooke.uk" title="Email george@georgecooke.uk">George@GeorgeCooke.uk</a></p>
         </section>
 
         <footer id="main-footer">
