--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 text-align: center;
             }
         </style>
+
+        <link rel="shortcut icon" type="image/x-icon" href="images/facicon.ico">
     </head>
 
     <body>
