--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
         <title>George Cooke - Portfolio</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
@@ -25,7 +26,7 @@
         <section>
             <hr>
             <div class="container">
-                <h1>Content coming soon!</h1>
+                <h1>Content coming soon.</h1>
             </div>
         </section>
 
