Updated styling on all pages

--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,25 @@
     </head>
 
     <body>
-        <header class="header-parent">
-            <div class="header-child-text">George Cooke</div>
+        <header>
+            <div class="header-parent">
+                <div class="header-child-text">George Cooke</div>
 
-            <nav class="header-child-list">
-                <ul class="navigation-list">
-                    <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
-                    <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
-                    <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
-                    <li class="navigation-item"><a href="#" class="nav-button-current">Contact</a></li>
-                </ul>
-            </nav>
+                <nav class="header-child-list">
+                    <ul class="navigation-list">
+                        <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
+                        <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                        <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
+                        <li class="navigation-item"><a href="#" class="nav-button-current">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <hr>
         </header>
 
         <section>
-            <hr>
             <div class="container">
-                <h1>Content coming soon!</h1>
+                <h1>Content coming soon.</h1>
             </div>
         </section>
 
