--- a/blog-overviews.html
+++ b/blog-overviews.html
@@ -5,27 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>George Cooke - Blog</title>
 
-        <style type="text/css">
-            #main-footer{
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
-        <nav>
-            <ul class="navigation-list">
-                <li>Pages</li>
-                <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
-                <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
-                <li class="navigation-item"><a href="#" class="nav-button">Blog</a></li>
-                <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
-            </ul>
-        </nav>
+        <header>
+            <div class="header-parent">
+                <div class="header-child-text">George Cooke</div>
+
+                <nav class="header-child-list">
+                    <ul class="navigation-list">
+                        <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
+                        <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                        <li class="navigation-item"><a href="#" class="nav-button-current">Blog</a></li>
+                        <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <hr>
+        </header>
 
         <section>
-            <hr>
-            <h1>Content coming soon!</h1>
+            <div class="container">
+                <h1>Content coming soon.</h1>
+            </div>
         </section>
 
         <footer id="main-footer">
