--- a/portfolio.html
+++ b/portfolio.html
@@ -10,21 +10,23 @@
     </head>
 
     <body>
-        <header class="header-parent">
-            <div class="header-child-text">George Cooke</div>
+        <header> 
+            <div class="header-parent">
+                <div class="header-child-text">George Cooke</div>
 
-            <nav class="header-child-list">
-                <ul class="navigation-list">
-                    <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
-                    <li class="navigation-item"><a href="#" class="nav-button-current">Portfolio</a></li>
-                    <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
-                    <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
-                </ul>
-            </nav>
+                <nav class="header-child-list">
+                    <ul class="navigation-list">
+                        <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
+                        <li class="navigation-item"><a href="#" class="nav-button-current">Portfolio</a></li>
+                        <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
+                        <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <hr>
         </header>
 
         <section>
-            <hr>
             <div class="container">
                 <h1>Content coming soon.</h1>
             </div>
