--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section>
             <div class="container">
-                <p>Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.<br><br>This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress! Feel free to reach out at any point at <a href = "mailto:george@georgecooke.uk" title="Email george@georgecooke.uk">George@GeorgeCooke.uk</a></p>
+                <p>Hello, my name is George Cooke. I am a first year A-Level Computer Science (in addition to Maths and Economics) student studying in the UK. I am currently most experienced in Python but am looking to broaden my horizons with C# and HTML/CSS/Javascript.<br><br>This is where I will be posting my development portfolio going forward. I will confess this might as well be my first time using HTML so you will have to forgive me if it is a little rudimentary. Make sure to keep checking back to check on my progress! Feel free to reach out at any point at <em>George@GeorgeCooke.uk</em></p>
             </div>
         </section>
 
