--- a/blog-overviews.html
+++ b/blog-overviews.html
@@ -18,6 +18,7 @@
                     <ul class="navigation-list">
                         <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                        <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li>
                         <li class="navigation-item"><a href="#" class="nav-button-current">Blog</a></li>
                         <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
                         <li class="show-side-bar-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
@@ -32,6 +33,7 @@
             <ul class="side-bar-navigation-list">
                 <li class="navigation-item-side"><a href="index.html" class="nav-button">Home</a></li>
                 <li class="navigation-item-side"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                <li class="navigation-item-side"><a href="freelance.html" class="nav-button">Freelance</a></li>
                 <li class="navigation-item-side"><a href="#" class="nav-button-current">Blog</a></li>
                 <li class="navigation-item-side"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
