--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>George Cooke - Portfolio</title>
+        <title>George Cooke - Home</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
@@ -18,6 +18,7 @@
                     <ul class="navigation-list">
                         <li class="navigation-item"><a href="#" class="nav-button-current">Home</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                        <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li>
                         <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
                         <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
                         <li class="show-side-bar-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
@@ -32,6 +33,7 @@
             <ul class="side-bar-navigation-list">
                 <li class="navigation-item-side"><a href="#" class="nav-button-current">Home</a></li>
                 <li class="navigation-item-side"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                <li class="navigation-item-side"><a href="freelance.html" class="nav-button">Freelance</a></li>
                 <li class="navigation-item-side"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
                 <li class="navigation-item-side"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
