--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
         <title>George Cooke - Contact</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
+
+        <script defer src="javascript/script.js"></script>
     </head>
 
     <body>
@@ -37,29 +39,6 @@
                 <li class="navigation-item-side"><a href="#" class="nav-button-current">Contact</a></li>
             </ul>
         </nav>
-
-        <script>
-            function showSidebar(){
-                const sidebar = document.querySelector('.side-bar-navigation-list')
-                sidebar.style.display = 'flex'
-
-                const showButton = document.querySelector('.show-side-bar-button')
-                showButton.style.display = 'none'
-
-                const hideButton = document.querySelector('.hide-side-bar-button')
-                hideButton.style.display = 'flex'
-            }
-            function hideSidebar(){
-                const sidebar = document.querySelector('.side-bar-navigation-list')
-                sidebar.style.display = 'none'
-                
-                const showButton = document.querySelector('.show-side-bar-button')
-                showButton.style.display = 'flex'
-
-                const hideButton = document.querySelector('.hide-side-bar-button')
-                hideButton.style.display = 'none'
-            }
-        </script>
 
         <section>
             <div class="container">
