--- a/freelance.html
+++ b/freelance.html
@@ -7,6 +7,8 @@
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+
+        <script defer src="javascript/script.js"></script>
     </head>
 
     <body>
@@ -38,29 +40,6 @@
                 <li class="navigation-item-side"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
         </nav>
-
-        <script>
-            function showSidebar(){
-                const sidebar = document.querySelector('.side-bar-navigation-list')
-                sidebar.style.display = 'flex'
-
-                const showButton = document.querySelector('.show-side-bar-button')
-                showButton.style.display = 'none'
-
-                const hideButton = document.querySelector('.hide-side-bar-button')
-                hideButton.style.display = 'flex'
-            }
-            function hideSidebar(){
-                const sidebar = document.querySelector('.side-bar-navigation-list')
-                sidebar.style.display = 'none'
-                
-                const showButton = document.querySelector('.show-side-bar-button')
-                showButton.style.display = 'flex'
-
-                const hideButton = document.querySelector('.hide-side-bar-button')
-                hideButton.style.display = 'none'
-            }
-        </script>
 
         <section>
             <div class="container">
