Made it work when resizing the browser window

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script defer src="javascript/script.js"></script>
     </head>
 
-    <body>
+    <body onresize="checkSize()">
         <header> 
             <div class="header-parent">
                 <div class="header-child-text">George Cooke</div>
