--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <title>George Cooke - Contact</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
         <script defer src="javascript/script.js"></script>
     </head>
