COmmented out freelance

--- a/freelance.html
+++ b/freelance.html
@@ -19,6 +19,7 @@
                 <nav class="header-child-list">
                     <ul class="navigation-list">
                         <li class="navigation-item"><a href="index.html" class="nav-button">Home</a></li>
+                        <li class="navigation-item"><a href="about.html" class="nav-button">About</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                         <li class="navigation-item"><a href="#" class="nav-button-current">Freelance</a></li>
                         <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
@@ -28,12 +29,12 @@
                     </ul>
                 </nav>
             </div>
-            <hr>
         </header>
 
         <nav class="side-bar-list">
             <ul class="side-bar-navigation-list">
                 <li class="navigation-item-side"><a href="index.html" class="nav-button">Home</a></li>
+                <li class="navigation-item-side"><a href="about.html" class="nav-button">About</a></li>
                 <li class="navigation-item-side"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                 <li class="navigation-item-side"><a href="#" class="nav-button-current">Freelance</a></li>
                 <li class="navigation-item-side"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
@@ -49,7 +50,7 @@
 
         <footer id="main-footer">
             <hr>
-            <small>Copyright &copy; Dec. 2025 - George Cooke</small>
+            <small>Copyright &copy; Dec. 2025 - 2026 by George Cooke</small>
         </footer>
     </body>
 </html>
