--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 <nav class="header-child-list">
                     <ul class="navigation-list">
                         <li class="navigation-item"><a href="#" class="nav-button-current">Home</a></li>
+                        <li class="navigation-item"><a href="about.html" class="nav-button">About</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
-                        <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li>
+                        <!-- <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li> -->
                         <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
                         <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
                         <li class="show-side-bar-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
@@ -28,16 +29,16 @@
                     </ul>
                 </nav>
             </div>
-            <hr>
         </header>
 
         <nav class="side-bar-list">
             <ul class="side-bar-navigation-list">
-                <li class="navigation-item-side"><a href="#" class="nav-button-current">Home</a></li>
-                <li class="navigation-item-side"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
-                <li class="navigation-item-side"><a href="freelance.html" class="nav-button">Freelance</a></li>
-                <li class="navigation-item-side"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
-                <li class="navigation-item-side"><a href="contact.html" class="nav-button">Contact</a></li>
+                <li><a href="#" class="nav-button-current">Home</a></li>
+                <li><a href="about.html" class="nav-button">About</a></li>
+                <li><a href="portfolio.html" class="nav-button">Portfolio</a></li>
+                <!-- <li><a href="freelance.html" class="nav-button">Freelance</a></li> -->
+                <li><a href="blog-overviews.html" class="nav-button">Blog</a></li>
+                <li><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
         </nav>
 
@@ -49,7 +50,7 @@
 
         <footer id="main-footer">
             <hr>
-            <small>Copyright &copy; Dec. 2025 - George Cooke</small>
+            <small>Copyright &copy; Dec. 2025 - 2026 by George Cooke</small>
         </footer>
     </body>
 </html>
