Added styling to about

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <title>George Cooke - About</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/about.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
         <script defer src="javascript/script.js"></script>
@@ -46,8 +47,18 @@
             <div class="container">
                 <h1 class="Title">About Me</h1>
 
-                <h2>Overview</h2>
-                <p> Hello, my name is George Cooke. I am currently a first year A-Level student  studying Computer Science, Maths, and Economics based in the UK. I have aspirations of becoming a long-haul pilot for British Airways and program as a hobby.</p>
+                <div id="overview-div">
+                    <div id="overview-box">
+                        <h2>Overview</h2>
+                        <p>I'm George Cooke, I'm a UK-based student studying Computer Science, Economics, and Maths at A-Level. I'm enthusiastic about all things, technology, programming, and aviation. From a very young age, I have been enthused with a deep curiosity about how electronics function under the hood. As I grew older, this developed into a similar curiosity about software through which I developed strong Python skills as I pushed my personal limits. In addition to this interest in software as a hobby, I hope to become a long-haul pilot for British Airways.</p>
+                        <div id="overview-image-gallery">
+                            <img class="overview-gallery-image" src="images/152-landscape.jpg">
+                            <img class="overview-gallery-image" src="images/croatia-landscape.jpg">
+                            <img class="overview-gallery-image" src="images/152-cockpit.jpg">
+                        </div>
+                    </div>
+                    <img id="about-mug" src="images/about-mug.jpg">
+                </div>
                 <br>
 
                 <h2>Biography</h2>
