--- a/about.html
+++ b/about.html
@@ -49,8 +49,33 @@
 
                 <div id="overview-div">
                     <div id="overview-box">
-                        <h2>Overview</h2>
-                        <p>I'm George Cooke, I'm a UK-based student studying Computer Science, Economics, and Maths at A-Level. I'm enthusiastic about all things, technology, programming, and aviation. From a very young age, I have been enthused with a deep curiosity about how electronics function under the hood. As I grew older, this developed into a similar curiosity about software through which I developed strong Python skills as I pushed my personal limits. In addition to this interest in software as a hobby, I hope to become a long-haul pilot for British Airways.</p>
+                        <div id="overview-header">
+                            <h2 id="overview-title">Overview</h2>
+                            <ul class="about-links">
+                                <li class="about-links-item">
+                                    <a href="https://www.instagram.com/george.cooke8809/" target="_blank">
+                                        <img width="30" alt="White logo for instagram" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Instagram_white.svg/512px-Instagram_white.svg.png?20250523144816"></a>
+                                    </a>
+                                </li>
+                                <li class="about-links-item">
+                                    <a href="https://www.linkedin.com/in/george-cooke-562725295/" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="30px" height="30px"><path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z" fill="#FFFFFF" /></svg>
+                                    </a>
+                                </li>
+                                <li class="about-links-item">
+                                    <a href="https://open.spotify.com/user/nerts5t6v3m0fn1q86vdpw3ws?si=3ca16682ae46424f" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="30px" height="30px"><path d="M25.009,1.982C12.322,1.982,2,12.304,2,24.991S12.322,48,25.009,48s23.009-10.321,23.009-23.009S37.696,1.982,25.009,1.982z M34.748,35.333c-0.289,0.434-0.765,0.668-1.25,0.668c-0.286,0-0.575-0.081-0.831-0.252C30.194,34.1,26,33,22.5,33.001 c-3.714,0.002-6.498,0.914-6.526,0.923c-0.784,0.266-1.635-0.162-1.897-0.948s0.163-1.636,0.949-1.897 c0.132-0.044,3.279-1.075,7.474-1.077C26,30,30.868,30.944,34.332,33.253C35.022,33.713,35.208,34.644,34.748,35.333z M37.74,29.193 c-0.325,0.522-0.886,0.809-1.459,0.809c-0.31,0-0.624-0.083-0.906-0.26c-4.484-2.794-9.092-3.385-13.062-3.35 c-4.482,0.04-8.066,0.895-8.127,0.913c-0.907,0.258-1.861-0.272-2.12-1.183c-0.259-0.913,0.272-1.862,1.184-2.12 c0.277-0.079,3.854-0.959,8.751-1c4.465-0.037,10.029,0.61,15.191,3.826C37.995,27.328,38.242,28.388,37.74,29.193z M40.725,22.013 C40.352,22.647,39.684,23,38.998,23c-0.344,0-0.692-0.089-1.011-0.275c-5.226-3.068-11.58-3.719-15.99-3.725 c-0.021,0-0.042,0-0.063,0c-5.333,0-9.44,0.938-9.481,0.948c-1.078,0.247-2.151-0.419-2.401-1.495 c-0.25-1.075,0.417-2.149,1.492-2.4C11.729,16.01,16.117,15,21.934,15c0.023,0,0.046,0,0.069,0 c4.905,0.007,12.011,0.753,18.01,4.275C40.965,19.835,41.284,21.061,40.725,22.013z" fill="#FFFFFF" /></svg>
+                                    </a>
+                                </li>
+                                <li class="about-links-item">
+                                    <a href="https://github.com/GeorgeCooke8809" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px"><path d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z" fill="#FFFFFF"/></svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <p id="overview-body">I'm George Cooke, I'm a UK-based student studying Computer Science, Economics, and Maths at A-Level. I'm enthusiastic about all things, technology, programming, and aviation. From a very young age, I have been enthused with a deep curiosity about how electronics function under the hood. As I grew older, this developed into a similar curiosity about software through which I developed strong Python skills as I pushed my personal limits. In addition to this interest in software as a hobby, I hope to become a long-haul pilot for British Airways.</p>
                         <div id="overview-image-gallery">
                             <img class="overview-gallery-image" src="images/152-landscape.jpg">
                             <img class="overview-gallery-image" src="images/croatia-landscape.jpg">
