Updated hover effects and changed to articles

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                         <li class="navigation-item"><a href="#" class="nav-button-current">About</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                         <!-- <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li> -->
-                        <li class="navigation-item"><a href="blog-overviews.html" class="nav-button">Blog</a></li>
+                        <li class="navigation-item"><a href="articles-overviews.html" class="nav-button">Articles</a></li>
                         <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
                         <li class="show-side-bar-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
                         <li class="hide-side-bar-button" onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
