--- a/articles-overviews.html
+++ b/articles-overviews.html
@@ -22,7 +22,7 @@
                         <li class="navigation-item"><a href="about.html" class="nav-button">About</a></li>
                         <li class="navigation-item"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                         <!-- <li class="navigation-item"><a href="freelance.html" class="nav-button">Freelance</a></li> -->
-                        <li class="navigation-item"><a href="#" class="nav-button-current">Blog</a></li>
+                        <li class="navigation-item"><a href="#" class="nav-button-current">Articles</a></li>
                         <li class="navigation-item"><a href="contact.html" class="nav-button">Contact</a></li>
                         <li class="show-side-bar-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
                         <li class="hide-side-bar-button" onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
@@ -37,7 +37,7 @@
                 <li class="navigation-item-side"><a href="about.html" class="nav-button">About</a></li>
                 <li class="navigation-item-side"><a href="portfolio.html" class="nav-button">Portfolio</a></li>
                 <!-- <li class="navigation-item-side"><a href="freelance.html" class="nav-button">Freelance</a></li> -->
-                <li class="navigation-item-side"><a href="#" class="nav-button-current">Blog</a></li>
+                <li class="navigation-item-side"><a href="#" class="nav-button-current">Articles</a></li>
                 <li class="navigation-item-side"><a href="contact.html" class="nav-button">Contact</a></li>
             </ul>
         </nav>
